# sestenyaziya

./: .gitignore  README.md  main.py  pyproject.toml
app/: cache_utils.py  config.py  diarization.py  models.py  transcription.py  ui.py
